@@ -3,6 +3,7 @@
 	* Menu
 	Fiddled a bit with the in game menu
 	Made the minimum version check of python work
+	Made the "end game" and Toggle Full Screen work
 
 2001-11-04  Mads Bondo Dydensborg  <madsdyd@mother>
 
